- added http transport (can do get and post requests right now) - http transport can handle gzip content encoding